--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,20 @@
 
     html,
     body {
-        @apply w-full overflow-x-hidden;
+        @apply h-screen w-screen;
+        /* Ocupa toda la altura y ancho de la viewport */
+    }
+
+    .container {
+        @apply mx-auto max-w-7xl px-4 sm:px-6 lg:px-8;
+        /* Ajusta el ancho máximo según tus necesidades */
+        @apply flex flex-col items-center justify-center;
+        /* Centra los elementos vertical y horizontalmente */
+
+        /* Media query para pantallas pequeñas */
+        @screen sm {
+            @apply max-w-none;
+            /* Ocupa todo el ancho disponible */
+        }
     }
 }
